# cookbook_rs

./: Cargo.toml  README.md
http_server/axum_http_server/: Cargo.toml  Dockerfile  Makefile  README.md
http_server/axum_http_server/src/routes/: mod.rs
recipes/: README_TEMPLATE.md
recipes/async/: README.md
recipes/async/closures/: Cargo.toml  README.md
recipes/async/closures/src/: async_closures.rs  main.rs  sync_closures.rs
recipes/async/try_with_timeout/src/: main.rs
recipes/bindings/rust_bindings/: Cargo.toml
recipes/generics/: README.md
recipes/generics/stack/: README.md
recipes/generics/stack/src/: main.rs  stack.rs
recipes/generics/structs/: Cargo.toml  README.md
recipes/generics/structs/src/: main.rs  schema.rs
recipes/http/: README.md
recipes/http/axum_basic/: Cargo.toml  README.md
recipes/http/axum_basic/src/: main.rs
recipes/http/axum_custom_extractors/: Cargo.toml  README.md
recipes/http/axum_custom_extractors/src/: errors.rs  extractors.rs  main.rs
recipes/recursion/: README.md
recipes/recursion/fibonacci/: README.md
recipes/recursion/fibonacci/src/: main.rs
recipes/recursion/sorting/: Cargo.toml  README.md
recipes/serde/: README.md
recipes/serde/read_write_json/: Cargo.toml  README.md
recipes/structs/: README.md
recipes/structs/validation/: Cargo.toml  README.md
recipes/test_framework/: README.md
recipes/test_framework/rstest_basic/: Cargo.toml  README.md
recipes/traits/: README.md
recipes/traits/eq_and_ordering/: Cargo.toml  README.md
recipes/traits/traits_basic/: Cargo.toml  README.md
(+10 files in other folders)
